infra/minio/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-internal
  namespace: infra
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
  selector:
    app: minio
