infra/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: infra
spec:
  type: NodePort
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      nodePort: 30900
    - name: console
      port: 9001
      targetPort: 9001
      nodePort: 30901
  selector:
    app: minio
